<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/id"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/password"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/password_n_confirm"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/gender"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/birth"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/phone_n_number"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/e_mail"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signUp_id_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="id"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signUp_pw_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signUp_pwcf_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="passwordConfirm"
                android:ems="10"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/signUp_checkMale_checkBox"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/male" />

                <CheckBox
                    android:id="@+id/signUp_checkFemale_checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/female" />

            </LinearLayout>

            <EditText
                android:id="@+id/signUp_name_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signUp_birth_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="birth"
                android:ems="10"
                android:inputType="date" />

            <EditText
                android:id="@+id/signUp_phoneNum_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="phoneNum"
                android:ems="10"
                android:inputType="phone" />

            <EditText
                android:id="@+id/signUp_email_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="email"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signUp_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/signUp_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.345" />

</androidx.constraintlayout.widget.ConstraintLayout>